--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular6",
+  "name": "angular7",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -19,20 +19,23 @@
     "@angular/http": "^6.1.0",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
+    "@angular/platform-server": "^7.0.4",
     "@angular/router": "^6.1.0",
     "@ngrx/effects": "^6.1.2",
     "@ngrx/router-store": "^6.1.2",
     "@ngrx/store": "^6.1.2",
     "@ngrx/store-devtools": "^6.1.2",
+    "@nguniversal/module-map-ngfactory-loader": "^7.0.2",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "express": "^4.16.4",
     "firebase": "^5.5.8",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "~6.2.4",
+    "@angular/cli": "^7.0.6",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.8",
@@ -47,8 +50,10 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
+    "ts-loader": "^5.3.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~2.9.2"
+    "typescript": "~2.9.2",
+    "webpack-cli": "^3.1.2"
   }
 }
