--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angular6": {
+    "angular7": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/angular6",
+            "outputPath": "dist/angular7",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -44,25 +44,32 @@
               "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
-              "buildOptimizer": true
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                }
+              ]
             }
           }
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angular6:build"
+            "browserTarget": "angular7:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "angular6:build:production"
+              "browserTarget": "angular7:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angular6:build"
+            "browserTarget": "angular7:build"
           }
         },
         "test": {
@@ -96,7 +103,7 @@
         }
       }
     },
-    "angular6-e2e": {
+    "angular7-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -104,11 +111,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "angular6:serve"
+            "devServerTarget": "angular7:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "angular6:serve:production"
+              "devServerTarget": "angular7:serve:production"
             }
           }
         },
@@ -124,5 +131,5 @@
       }
     }
   },
-  "defaultProject": "angular6"
+  "defaultProject": "angular7"
 }
